Data/meow_errors_files.log
10
/data/js-variants/multee/Variants/meow/variant9/meow/node_modules/is-core-module/index.js:68
	return has(data, x) && versionIncluded(nodeVersion, data[x]);
	       ^

TypeError: has is not a function
    at isCore (/data/js-variants/multee/Variants/meow/variant9/meow/node_modules/is-core-module/index.js:68:9)
    at Object.fixNameField (/data/js-variants/multee/Variants/meow/variant9/meow/node_modules/normalize-package-data/lib/fixer.js:232:9)
    at /data/js-variants/multee/Variants/meow/variant9/meow/node_modules/normalize-package-data/lib/normalize.js:41:38
    at Array.forEach (<anonymous>)
    at normalize (/data/js-variants/multee/Variants/meow/variant9/meow/node_modules/normalize-package-data/lib/normalize.js:40:15)
    at meow (file:///data/js-variants/multee/Variants/meow/variant9/meow/node_modules/xo/node_modules/meow/index.js:170:2)
    at file:///data/js-variants/multee/Variants/meow/variant9/meow/node_modules/xo/cli.js:10:13
    at ModuleJob.run (node:internal/modules/esm/module_job:198:25)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:409:24)

Node.js v18.3.0
/data/js-variants/multee/Variants/meow/variant6/meow/node_modules/is-core-module/index.js:68
	return has(data, x) && versionIncluded(nodeVersion, data[x]);
	       ^

TypeError: has is not a function
    at isCore (/data/js-variants/multee/Variants/meow/variant6/meow/node_modules/is-core-module/index.js:68:9)
    at Object.fixNameField (/data/js-variants/multee/Variants/meow/variant6/meow/node_modules/normalize-package-data/lib/fixer.js:232:9)
    at /data/js-variants/multee/Variants/meow/variant6/meow/node_modules/normalize-package-data/lib/normalize.js:41:38
    at Array.forEach (<anonymous>)
    at normalize (/data/js-variants/multee/Variants/meow/variant6/meow/node_modules/normalize-package-data/lib/normalize.js:40:15)
    at meow (file:///data/js-variants/multee/Variants/meow/variant6/meow/node_modules/xo/node_modules/meow/index.js:170:2)
    at file:///data/js-variants/multee/Variants/meow/variant6/meow/node_modules/xo/cli.js:10:13
    at ModuleJob.run (node:internal/modules/esm/module_job:198:25)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:409:24)

Node.js v18.3.0
file:///data/js-variants/multee/Variants/meow/variant5/meow/node_modules/xo/node_modules/meow/index.js:11
import {readPackageUpSync} from 'read-pkg-up';
        ^^^^^^^^^^^^^^^^^
SyntaxError: The requested module 'read-pkg-up' does not provide an export named 'readPackageUpSync'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:128:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:194:5)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:409:24)
    at async loadESM (node:internal/process/esm_loader:85:5)
    at async handleMainPromise (node:internal/modules/run_main:61:12)

Node.js v18.3.0
file:///data/js-variants/multee/Variants/meow/variant4/meow/node_modules/redent/index.js:2
import indentString from 'indent-string';
       ^^^^^^^^^^^^
SyntaxError: The requested module 'indent-string' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:128:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:194:5)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:409:24)
    at async loadESM (node:internal/process/esm_loader:85:5)
    at async handleMainPromise (node:internal/modules/run_main:61:12)

Node.js v18.3.0
file:///data/js-variants/multee/Variants/meow/variant3/meow/node_modules/redent/index.js:1
import stripIndent from 'strip-indent';
       ^^^^^^^^^^^
SyntaxError: The requested module 'strip-indent' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:128:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:194:5)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:409:24)
    at async loadESM (node:internal/process/esm_loader:85:5)
    at async handleMainPromise (node:internal/modules/run_main:61:12)

Node.js v18.3.0
file:///data/js-variants/multee/Variants/meow/variant2/meow/node_modules/xo/node_modules/meow/index.js:10
import redent from 'redent';
       ^^^^^^
SyntaxError: The requested module 'redent' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:128:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:194:5)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:409:24)
    at async loadESM (node:internal/process/esm_loader:85:5)
    at async handleMainPromise (node:internal/modules/run_main:61:12)

Node.js v18.3.0
file:///data/js-variants/multee/Variants/meow/variant1/meow/node_modules/xo/node_modules/meow/index.js:9
import trimNewlines from 'trim-newlines';
       ^^^^^^^^^^^^
SyntaxError: The requested module 'trim-newlines' does not provide an export named 'default'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:128:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:194:5)
    at async Promise.all (index 0)
    at async ESMLoader.import (node:internal/modules/esm/loader:409:24)
    at async loadESM (node:internal/process/esm_loader:85:5)
    at async handleMainPromise (node:internal/modules/run_main:61:12)

Node.js v18.3.0
